# Palantir

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .ralphrc  CLAUDE.md  Grid-Sentinel_C2_Pitch_Deck.pptx  LICENSE  Makefile  Palantir_C2_Military_Brief.pptx  Palantir_C2_VC_Pitch.pptx  README.md  UPGRADE_PLAN.md  amc-grid.sh  cap_test.txt  cesium_requirements.md  findings.md  grid-sentinel.sh  package-lock.json  package.json  palantir.sh  playwright.config.ts  progress.md  pyproject.toml  requirements.txt  run_scenarios.sh  start.py  start.sh  task_plan.md  tsconfig.json
.autopilot/: CHECKPOINT.md  CODEBASE_STATE.md  CONSENSUS.md  REPORT.md  RESUME_BRIEFING.md  ROADMAP.md  TEAM_ID
.brainstorm/: CHECKPOINT.md  CONSENSUS.md  PROJECT_BRIEF.md  ROADMAP.md
.claude/: launch.json  settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.ralph/: AGENT.md  PROMPT.md
backend/: ams.db-shm  main.py  sim.py
docs/: API_REFERENCE.md  BLUEPRINT_IMPLEMENTATION_REPORT.md  BRAINSTORM.md  CODEMAPS.md  CONTRIBUTING.md  ENVIRONMENT_VARS.md  FRONTEND.md  INDEX.md  INTEGRATED_WORKFLOW.md  PRD.md  PRD_v2_upgrade.md  RUNBOOK.md  SETUP_GUIDE.md  SIMULATION.md  SYSTEM_ARCHITECTURE.md  UPDATE_SUMMARY.md  api_contract.md  architecture.md  asyncapi.yaml  desktop_host_spec.md  domain_model.md  event_catalog.md  layout_state_schema.md  map_tool_controller_spec.md  pane_registry_spec.md  project_charter.md  project_context.md  satellite_lens_spec.md  smoke-test.md  state_machines.md  timeline_model.md  (+5 more)
(+753 files in other folders)
