[project]
name = "amc-grid"
version = "2.0.0"
description = "AI-assisted Command & Control system with F2T2EA kill chain automation"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.128.8",
    "uvicorn==0.39.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.11.0",
    "python-dotenv==1.2.1",
    "structlog==25.5.0",
    "websockets==15.0.1",
    "requests==2.32.5",
    "numpy==2.0.2",
    "scipy==1.13.1",
    "opencv-python==4.13.0.92",
    "anthropic==0.85.0",
    "google-genai==1.47.0",
    "ollama==0.6.1",
    "PyYAML==6.0.3",
    "tenacity==9.1.2",
    "httpx==0.28.1",
    "anyio==4.12.1",
    "starlette==0.49.3",
    "langgraph>=0.0.21",
    "langchain-openai>=0.0.8",
    "langchain-core>=0.1.33",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-cov==7.0.0",
    "hypothesis==6.141.1",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402", "F841"]

[tool.pytest.ini_options]
testpaths = ["src/python/tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/python"]

[tool.coverage.report]
fail_under = 80
